# solarxr-cli

./: Cargo.toml  README.md  flake.nix
.cargo/: config.toml
make/: Cargo.toml
make/src/: main.rs
nix/: default.nix
solarxr-cli/: Cargo.toml  build.rs
solarxr-cli/src/: cli.rs  main.rs
solarxr-client/: Cargo.toml
solarxr-client/src/: lib.rs
solarxr-common/: Cargo.toml
solarxr-common/src/: lib.rs
solarxr-input/: Cargo.toml  README.md  build.rs  config.json
solarxr-input/res/: solarxr-input.service.in
solarxr-input/src/: cli.rs  config.rs  main.rs
