[package]
name = "solarxr-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["cargo", "derive"] }
eyre = "0.6.12"
serde_json = "1.0.143"
tokio = { version = "1.47.1" }
solarxr-client = { path = "../solarxr-client" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[build-dependencies]
clap = { version = "4.5.45", features = ["cargo", "derive"] }
clap_complete = "4.5.58"
