[package]
name = "solarxr-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
eyre = "0.6.12"
serde_json = "1.0.143"
tokio = { version = "1.47.1" }
solarxr-common = { path = "../solarxr-common" }
solarxr-client = { path = "../solarxr-client" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[build-dependencies]
solarxr-common = { path = "../solarxr-common" }
clap = { version = "4.5.45", features = ["derive"] }
clap_complete = "4.5.58"
