[package]
name = "solarxr-input"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
eyre = "0.6.12"
openxr = { version = "0.21.1", features = ["linked"], default-features = false }
paste = "1.0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
solarxr-client = { path = "../solarxr-client" }
solarxr-common = { path = "../solarxr-common" }
tokio = "1.51.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
xdg = "3.0.0"

[build-dependencies]
solarxr-common = { path = "../solarxr-common" }
clap = { version = "4.5.45", features = ["derive"] }
clap_complete = "4.5.58"
